--- a/css/style.css
+++ b/css/style.css
@@ -753,3 +753,72 @@ Sidebar
   text-align: center;
   margin-top: 15px; 
 }
+
+/* Login Page */
+
+.loginbox {
+  width: 320px;
+  height: 420px;
+  background-color: #1c1d20;
+  color: #fff;
+  top: 50%;
+  left:50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
+.loginbox > #LoginHeader {
+  color: #f37735;
+  margin: 0;
+  padding: 0 0 28px;
+  text-align: center;
+  font-size: 22px;
+}
+
+.loginbox p {
+  color: whitesmoke;
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+}
+
+.loginbox input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.loginbox input[type = "text"], input[type="password"]
+{
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 48px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.loginbox input[type="submit"]
+{
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #f37735;
+  color: #fff; 
+  font-size: 18px;
+  border-radius: 28px;
+}
+
+.loginbox input[type="submit"]:hover
+{
+  cursor: pointer;
+  background: #f37735;
+  color: #211f27;
+}
+
+
+
+
+
