--- a/css/style.css
+++ b/css/style.css
@@ -818,7 +818,66 @@ Sidebar
   color: #211f27;
 }
 
+/*SignUp Form*/
+.signupbox {
+  width: 320px;
+  height: 500px;
+  background-color: #1c1d20;
+  color: #fff;
+  top: 50%;
+  left:50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
 
+.signupbox > #SignupHeader {
+  color: #f37735;
+  margin: 0;
+  padding: 0 0 28px;
+  text-align: center;
+  font-size: 34px;
+}
 
+.signupbox p {
+  color: whitesmoke;
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+}
 
+.signupbox input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.signupbox input[type = "text"], input[type="password"]
+{
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 48px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.signupbox input[type="submit"]
+{
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #f37735;
+  color: #fff; 
+  font-size: 18px;
+  border-radius: 28px;
+}
+
+.signupbox input[type="submit"]:hover
+{
+  cursor: pointer;
+  background: #f37735;
+  color: #211f27;
+}
 
