--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,8 +1,7 @@
-<% console.log("EJS FTW") %>
 <div id="messages">
 <% Object.keys(messages).forEach(function (type) { %>
   <% messages[type].forEach(function (message) { %>
-    <div class='alert alert-'+type><%= message %></div>
+    <%= message %>
   <% }) %>
 <% }) %>
 </div>
