--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,9 @@
 <body>
     
     <div class="signupbox">
+      <div id="registerError">
+        <%- messages('message', locals) %>
+      </div>
        <h1 id = "SignupHeader">Sign Up Here</h1>
        <form method='POST', action="/registerUser">
            <p class="signupText">Username</p>
@@ -25,6 +28,7 @@
            <input type="password" name="password2" placeholder="Enter Password">
 
            <input type="submit" name="" value="Sign Up">
+           <a href="login">Already have an account?</a>
        </form> 
     </div>
 
