--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@
         <%- messages('message', locals) %>
       </div>
        <h1 id = "SignupHeader">Sign Up Here</h1>
-       <form method='POST', action="/registerUser">
+       <form method='POST', action="/register">
            <p class="signupText">Username</p>
            <input type="text" name="username" placeholder="Enter Username">
 
