--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 		<nav class="cd-nav">
 			<ul class="cd-top-nav">
 				<li><a href="welcome-page.html">Welcome</a></li>
-				<li><a href="#0">Support</a></li>
+				<li><a href="/support">Support</a></li>
 				<li class="has-children account">
 					<a href="#0">
 						Account
