--- a/views/addpost.ejs
+++ b/views/addpost.ejs
@@ -9,15 +9,15 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 	<!--CSS-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" href="../css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="../css/style.css"> <!-- Resource style -->
+	<script src="../js/modernizr.js"></script> <!-- Modernizr -->
   	<!--Title-->
 	<title>Anon.</title>
 </head>
 <body>
 	<header class="cd-main-header">
-		<a href="#0" class="cd-logo"><img src="img/cd-logo.svg" alt="Logo"></a>
+		<a href="/" class="cd-logo"><img src="../img/cd-logo.svg" alt="Logo"></a>
 		
 		<div class="cd-search is-hidden">
 			<form action="#0">
@@ -43,7 +43,6 @@
 						<li><a href="/login">Login</a></li>
 						<li><a href="/register">Sign Up</a></li>
 						<% } %>
-				
 					</ul>
 				</li>
 			</ul>
@@ -62,9 +61,12 @@
 					<a href="#0">Overview</a>
 					
 					<ul>
-						<li><a href="#0">All Data</a></li>
-						<li><a href="#0">Category 1</a></li>
-						<li><a href="#0">Category 2</a></li>
+						<% if(user){ %>
+						<li><a href="/logout">Logout</a></li>
+						<% } else{ %>
+						<li><a href="/login">Login</a></li>
+						<li><a href="/register">Sign Up</a></li>
+						<% } %>
 					</ul>
 				</li>
 				<li class="has-children notifications active">
@@ -124,15 +126,41 @@
 
 		<div class="content-wrapper">
 					<h1>ANON.</h1>
-					<h2>Most Viewed</h2>
-	
+                    <h2 id = "MakePost">Create a Post</h2>
+
+                    <form action="/posts/add" method="POST" class="addPost">
+           				<input type="text" name="title" placeholder="Title">
+           				<br>
+                    	<textarea name="body"></textarea>
+                    	<br>
+                    	<input list="categories" name="category">
+  						<datalist id="categories">
+						    <option value="Sports">
+						    <option value="Computers">
+						    <option value="Cars">
+						    <option value="Education">
+						    <option value="Psychology">
+  						</datalist>
+  						<br>
+  						<input list="thread" name="thread">
+  						<datalist id="thread">
+						    <option value="No Thread">
+						    <option value="Thread 2">
+						    <option value="Thread 3">
+						    <option value="Thread 4">
+						    <option value="Thread 5">
+  						</datalist>
+  						<br>
+                    	<input type="submit" name="" value="Add Post">
+                    </form>
+
 		</div> <!-- .content-wrapper -->
 
 	</main> <!-- .cd-main-content -->
 
-<script src="js/sweetalert/dist/sweetwater.min.js"></script>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.menu-aim.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="../js/sweetalert/dist/sweetwater.min.js"></script>
+<script src="../js/jquery-2.1.4.js"></script>
+<script src="../js/jquery.menu-aim.js"></script>
+<script src="../js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
