--- a/views/support.ejs
+++ b/views/support.ejs
@@ -1,1 +1,5 @@
-This will be the support page
+<% include ../partials/header-top.ejs %>
+<title>Anon. - Support</title>
+<% include ../partials/header-bottom.ejs %>
+
+<% include ../partials/footer.ejs %>
