--- a/views/addpost.ejs
+++ b/views/addpost.ejs
@@ -1,166 +1,34 @@
-<!doctype html>
-<html lang="en" class="no-js">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-	<!--CSS-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="../css/style.css"> <!-- Resource style -->
-	<script src="../js/modernizr.js"></script> <!-- Modernizr -->
-  	<!--Title-->
-	<title>Anon.</title>
-</head>
-<body>
-	<header class="cd-main-header">
-		<a href="/" class="cd-logo"><img src="../img/cd-logo.svg" alt="Logo"></a>
-		
-		<div class="cd-search is-hidden">
-			<form action="#0">
-				<input type="search" placeholder="Search...">
-			</form>
-		</div> <!-- cd-search -->
+<% include ../partials/header-top.ejs %>
+<title>Anon. - Post</title>
+<% include ../partials/header-bottom.ejs %>
 
-		<a href="#0" class="cd-nav-trigger">Menu<span></span></a>
+<h1>ANON.</h1>
+<h2 id = "MakePost">Create a Post</h2>
 
-		<nav class="cd-nav">
-			<ul class="cd-top-nav">
-				<li><a href="welcome-page.html">Welcome</a></li>
-				<li><a href="/support">Support</a></li>
-				<li class="has-children account">
-					<a href="#0">
-						Account
-					</a>
+<form action="/posts/add" method="POST" class="addPost">
+	<input type="text" name="title" placeholder="Title">
+	<br>
+	<textarea name="body"></textarea>
+	<br>
+	<input list="categories" name="category">
+		<datalist id="categories">
+		    <option value="Sports">
+		    <option value="Computers">
+		    <option value="Cars">
+		    <option value="Education">
+		    <option value="Psychology">
+		</datalist>
+		<br>
+		<input list="thread" name="thread">
+		<datalist id="thread">
+		    <option value="No Thread">
+		    <option value="Thread 2">
+		    <option value="Thread 3">
+		    <option value="Thread 4">
+		    <option value="Thread 5">
+		</datalist>
+		<br>
+	<input type="submit" name="" value="Add Post">
+</form>
 
-					<ul>
-						<% if(user){ %>
-						<li><a href="/logout">Logout</a></li>
-						<% } else{ %>
-						<li><a href="/login">Login</a></li>
-						<li><a href="/register">Sign Up</a></li>
-						<% } %>
-					</ul>
-				</li>
-			</ul>
-		</nav>
-	</header> <!-- .cd-main-header -->
-
-	<main class="cd-main-content">
-		<nav class="cd-side-nav">
-			<ul>
-				<li class="cd-label">Action</li>
-				<li class="action-btn"><a href="/posts/add">Post!</a></li>
-			</ul>
-			<ul>
-				<li class="cd-label">Main</li>
-				<li class="has-children overview">
-					<a href="#0">Overview</a>
-					
-					<ul>
-						<% if(user){ %>
-						<li><a href="/logout">Logout</a></li>
-						<% } else{ %>
-						<li><a href="/login">Login</a></li>
-						<li><a href="/register">Sign Up</a></li>
-						<% } %>
-					</ul>
-				</li>
-				<li class="has-children notifications active">
-					<a href="#0">Notifications<!--<span class="count">3</span>--></a>
-					
-					<ul>
-						<li><a href="#0">All Notifications</a></li>
-						<li><a href="#0">Friends</a></li>
-						<li><a href="#0">Other</a></li>
-					</ul>
-				</li>
-
-				<li class="has-children comments">
-					<a href="#0">Comments</a>
-					
-					<ul>
-						<li><a href="#0">All Comments</a></li>
-						<li><a href="#0">Edit Comment</a></li>
-						<li><a href="#0">Delete Comment</a></li>
-					</ul>
-				</li>
-			</ul>
-
-			<ul>
-				<li class="cd-label">Secondary</li>
-				<li class="has-children bookmarks">
-					<a href="#0">Bookmarks</a>
-					
-					<ul>
-						<li><a href="#0">All Bookmarks</a></li>
-						<li><a href="#0">Edit Bookmark</a></li>
-						<li><a href="#0">Import Bookmark</a></li>
-					</ul>
-				</li>
-				<li class="has-children images">
-					<a href="#0">Images</a>
-					
-					<ul>
-						<li><a href="#0">All Images</a></li>
-						<li><a href="#0">Edit Image</a></li>
-					</ul>
-				</li>
-
-				<li class="has-children users">
-					<a href="#0">Users</a>
-					
-					<ul>
-						<li><a href="#0">All Users</a></li>
-						<li><a href="#0">Edit User</a></li>
-						<li><a href="#0">Add User</a></li>
-					</ul>
-				</li>
-			</ul>
-
-			
-		</nav>
-
-		<div class="content-wrapper">
-					<h1>ANON.</h1>
-                    <h2 id = "MakePost">Create a Post</h2>
-
-                    <form action="/posts/add" method="POST" class="addPost">
-           				<input type="text" name="title" placeholder="Title">
-           				<br>
-                    	<textarea name="body"></textarea>
-                    	<br>
-                    	<input list="categories" name="category">
-  						<datalist id="categories">
-						    <option value="Sports">
-						    <option value="Computers">
-						    <option value="Cars">
-						    <option value="Education">
-						    <option value="Psychology">
-  						</datalist>
-  						<br>
-  						<input list="thread" name="thread">
-  						<datalist id="thread">
-						    <option value="No Thread">
-						    <option value="Thread 2">
-						    <option value="Thread 3">
-						    <option value="Thread 4">
-						    <option value="Thread 5">
-  						</datalist>
-  						<br>
-                    	<input type="submit" name="" value="Add Post">
-                    </form>
-
-		</div> <!-- .content-wrapper -->
-
-	</main> <!-- .cd-main-content -->
-
-<script src="../js/sweetalert/dist/sweetwater.min.js"></script>
-<script src="../js/jquery-2.1.4.js"></script>
-<script src="../js/jquery.menu-aim.js"></script>
-<script src="../js/main.js"></script> <!-- Resource jQuery -->
-</body>
-</html>
+<% include ../partials/footer.ejs %>
