--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <div class="signupbox">
+    <div class="signupboxSolo">
       <div id="registerMessage">
         <%- messages('message', locals) %>
       </div>
