--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -11,7 +11,7 @@
         <div class="card-body">
             <h5 class="card-title">Watch Out!</h5>
             <p class="card-text">This site contains sensitive content.</p>
-            <a href="index.html" class="btn btn-primary">Go to site.</a>
+            <a href="/" class="btn btn-primary">Go to site.</a>
         </div>
     </div>
     </center>
@@ -35,7 +35,7 @@
             <input type="submit" name="" value="Sign Up">
         </form> 
     </div>
-    <p id="welcome-or">Or</p>
+    <p>Or</p>
     <div class="loginbox">
         <div id="registerMessage">
             <%- messages('message', locals) %>
