Fixed admin route error
req.user.username is undefined has been fixed

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,5 @@
 <% include ../partials/header-top.ejs %>
 <title>Anon. - Error 404</title>
 <% include ../partials/header-bottom.ejs %>
+
+<% include ../partials/footer.ejs %>
