--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -32,9 +32,11 @@
             <p class="signupText">Confirm Pasword</p>
             <input type="password" name="password2" placeholder="Enter Password">
             <input type="submit" name="" value="Sign Up">
+            <a href="#">Already Have An Account?</a>
         </form> 
     </div>
-    
+
+<!--
     <div id="or-message">
         <p>Or</p>
     </div>
@@ -49,6 +51,7 @@
             <input type="submit" name="" value="Login">
         </form> 
     </div>
+-->
 </div>
 </div> <!-- .content-wrapper -->
 </main> <!-- .cd-main-content -->
