Basic Posts Overview Infrastructure
Setup viewpost.ejs
Setup index route
Setup basic infrastructure to generate posts for the overview page

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -24,7 +24,7 @@
 <div id="welcomeContainer">
     <div class="signupbox">
         <h1 id = "SignupHeader">Sign Up Here</h1>
-        <form action="register" method="POST">
+        <form action="/register" method="POST">
             <p class="signupText">Username</p>
             <input type="text" name="username" placeholder="Enter Username">    
             <p class="signupText">Password</p>
