--- a/partials/header-bottom.ejs
+++ b/partials/header-bottom.ejs
@@ -49,7 +49,7 @@
 			<ul>
 				<li class="cd-label">Main</li>
 				<li class="has-children overview">
-					<a href="#0">Overview</a>
+					<a href="/">Overview</a>
 					
 					<ul>
 						<li><a href="#0">All Data</a></li>
