Dynamic Posts for Overview

--- a/views/viewpost.ejs
+++ b/views/viewpost.ejs
@@ -2,93 +2,52 @@
 <title>Anon. - Overview</title>
 <% include ../partials/header-bottom.ejs %>
 
-            <h1>Overview</h1>
-            <!--
-            <div id="content">
-                    <div id="main">
-                        <div class="post">
-                            <h2><a href="#">Jake Plays With His New Dog Friends At The Park</a></h2>
-                            <p class="date">18 <span>Jul</span></p>
-                            <ul class="meta">
-                                <li>Posted by <a href="#">DUMBASS</a></li>
-                                <li class="comments"><a href="#">5 Comments</a></li>
-                            </ul>
-                            <div class="post-content">  
-                            <p>   
-                            Vinyl disrupt hoodie gastropub tousled hashtag actually everyday carry tacos.
-                            Unicorn swag tofu, gochujang chartreuse
-                            kitsch fam tattooed literally chicharrones. Retro crucifix vinyl VHS brunch yuccie. 
-                            Yuccie hexagon palo santo lyft iceland.
-                            Seitan sriracha 90's brunch readymade ramps narwhal XOXO.
-                            </p>
-                        </div>	
-                </div>
-            -->
+<h1>Overview</h1>
+<% clientPosts.forEach(function(post){ %>
+  <center>
+    <div class="post-content">
+      <div class="main">    
+        <div class="card">
+          <div class="card-header">
+            <h2><%= post.title %>></h2>
+          </div>
+          <div class="card-body">
+            <p class="card-text"><%= post.body %></p>
+            <p class="date"><%= post.post_date %></p>
+            <ul class="meta">
+              <li>Posted by <a href="#"><%= post.author %></a></li>
+            </ul>
+            <a href="#" class="btn btn-primary">View Post</a>
+          </div>
+        </div>
+      </div>
+    </div>  
+  </center>  
+<% }) %>
+            
 
             
 
-            <center>
-            <div class="post-content">
-            <div class="main">    
-            <div class="card">
-                    <div class="card-header">
-                      <h2>Post Title</h2>
-                    </div>
-                    <div class="card-body">
-                      <h5 class="card-title">so ive got dis probelm</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit proident...</p>
-                      <p class="date">16 <span>Jul</span> 2019</p>
-                            <ul class="meta">
-                                <li>Posted by <a href="#">DUMBASS</a></li>
-                                <li class="comments"><a href="#">View Comments</a></li>
-                      <a href="#" class="btn btn-primary">View Post</a>
-                    </div>
-                  </div>
-                </div>
-            </div>  
-            </center>  
-            
-            <center>
-                    <div class="post-content">
-                    <div class="main">    
-                    <div class="card">
-                            <div class="card-header">
-                              <h2>Post Title</h2>
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">so ive got dis probelm</h5>
-                              <p class="card-text">"Lorem, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident...</p>
-                              <p class="date">19 <span>Jul</span> 2019</p>
-                                    <ul class="meta">
-                                        <li>Posted by <a href="#">DUMBASS</a></li>
-                                        <li class="comments"><a href="#">View Comments</a></li>
-                              <a href="#" class="btn btn-primary">View Post</a>
-                            </div>
-                          </div>
-                        </div>
-                    </div>  
-                    </center>
-
-                    <center>
-                            <div class="post-content">
-                            <div class="main">    
-                            <div class="card">
-                                    <div class="card-header">
-                                      <h2>Post Title</h2>
-                                    </div>
-                                    <div class="card-body">
-                                      <h5 class="card-title">so ive got dis probelm</h5>
-                                      <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident...</p>
-                                      <p class="date">18 <span>Jul</span> 2019</p>
-                                            <ul class="meta">
-                                                <li>Posted by <a href="#">DUMBASS</a></li>
-                                                <li class="comments"><a href="#">View Comments</a></li>
-                                      <a href="#" class="btn btn-primary">View Post</a>
-                                    </div>
-                                  </div>
-                                </div>
-                            </div>  
-                            </center>
+<!-- <center>
+<div class="post-content">
+<div class="main">    
+<div class="card">
+        <div class="card-header">
+          <h2>Post Title</h2>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">so ive got dis probelm</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit proident...</p>
+          <p class="date">16 <span>Jul</span> 2019</p>
+                <ul class="meta">
+                    <li>Posted by <a href="#">DUMBASS</a></li>
+                    <li class="comments"><a href="#">View Comments</a></li>
+          <a href="#" class="btn btn-primary">View Post</a>
+        </div>
+      </div>
+    </div>
+</div>  
+</center>   -->
                     <!--   
                         <div class="pagination">
                             <p class="prev"><a href="#">Older posts</a></p>
