Made Post Page an EJS File

--- a/partials/header-bottom.ejs
+++ b/partials/header-bottom.ejs
@@ -44,7 +44,7 @@
 		<nav class="cd-side-nav">
 			<ul>
 				<li class="cd-label">Action</li>
-				<li class="action-btn"><a href="/posts/add">Post!</a></li>
+				<li class="action-btn"><a href="/posts/add">Post</a></li>
 			</ul>
 			<ul>
 				<li class="cd-label">Main</li>
