--- a/views/viewpost.ejs
+++ b/views/viewpost.ejs
@@ -17,7 +17,7 @@
             <ul class="meta">
               <li>Posted by <a href="#"><%= post.author %></a></li>
             </ul>
-            <a href="#" class="btn btn-primary">View Post</a>
+            <a href="/" class="btn btn-primary">View Post</a>
           </div>
         </div>
       </div>
