Post Generation Algorithm and Overview Page
Worked on the algorithm, got posts to show up on overview page, now have to evaluate the posts that are chosen.

--- a/views/addpostnew.ejs
+++ b/views/addpostnew.ejs
@@ -74,7 +74,7 @@
 				</li>
 				<li class="has-children notifications">
                     <% if(user){ %>
-                        <a href="/notifications">Notifications<span class="count"><%= user.notfications.length %></span></a>
+                        <a href="/notifications">Notifications<span class="count"><%= user.notifications.length %></span></a>
                         
                         <ul>
                             <li><a href="#0">All Notifications</a></li>
