--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -113,5 +113,6 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.menu-aim.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="../js/ajax.js"></script>
 </body>
 </html>
