--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -3,10 +3,11 @@
 <% include ../partials/header-bottom.ejs %>
 
 <% var dayOfWeek = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"] %>
-<% var month = ["January","February","March","April","May","June","July","August","September","October","November","December"] %>
+<% var months = ["January","February","March","April","May","June","July","August","September","October","November","December"] %>
 <% var dayEndings = ["th","st","nd","rd","th","th","th","th","th","th"] %>
 
 <h1>Overview</h1>
+<div class="posts">
 <% clientPosts.forEach(function(post){ %>
   <center>
     <div class="post-content">
@@ -20,6 +21,7 @@
             <p class="date">
               <% var postDate = (Date.now()-Date.parse(post.post_date))/(1000*3600) %>
               <% var postDayOfMonth = post.post_date.getDate() %>
+              <% var now = new Date() %>
 
               <!-- Posts Within 24hrs -->
               <% if(postDate < 24){ %>
@@ -64,7 +66,9 @@
             <ul class="meta">
               <% if(post.author == "Anonymous"){ %>
                 <li>Posted by Anonymous</li>
-              <% } else{ %> 
+              <% } else if(post.author == undefined){ %>
+                <li>Posted by An Unknown User</li>
+              <% } else{ %>
                 <li>Posted by <a href="/users/view/<%= post.author %>"><%= post.author %></a></li>
               <% } %>
             </ul>
@@ -75,7 +79,11 @@
     </div>  
   </center>  
 <% }) %>
+</div>
             
+
+            
+
 <!-- <center>
 <div class="post-content">
 <div class="main">    
@@ -113,6 +121,6 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.menu-aim.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="../js/ajax.js"></script>
+<script src="js/ajax.js"></script>
 </body>
 </html>
