--- a/partials/welcome-header.ejs
+++ b/partials/welcome-header.ejs
@@ -62,7 +62,7 @@
 			<ul>
 				<li class="cd-label">Main</li>
 				<li class="has-children overview">
-					<a href="#0">Overview</a>
+					<a class="welcome-continue" href="/">Overview</a>
 					
 					<ul>
 						<li><a href="/trending">Trending</a></li>
