--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -9,7 +9,7 @@
         <div class="card-body">
             <h5 class="card-title">Watch Out!</h5>
             <p class="card-text">This site contains sensitive content.</p>
-            <a href="/" class="btn btn-primary" id="welcome-continue">Go to site.</a>
+            <a href="/" class="btn btn-primary welcome-continue">Go to site.</a>
         </div>
     </div>
     </center>
@@ -63,7 +63,7 @@
 <script>
     var socket = io("localhost:3000");
 
-    $('#welcome-continue').on('click', function(event){
+    $('.welcome-continue').on('click', function(event){
 		socket.emit('welcomeContinue');
     }); 
 </script>
